--- a/app/src/main/res/layout/commonbar.xml
+++ b/app/src/main/res/layout/commonbar.xml
@@ -2,5 +2,5 @@
 <com.fast.fastxs.weight.CustomBarbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/titleBar"
+    android:tag="titleBar"
     android:padding="@dimen/dimen_10" />
